[gd_scene load_steps=28 format=2]

[ext_resource path="res://Cheese Toast 400.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/characters_packed.png" type="Texture" id=3]
[ext_resource path="res://scenes/secondTileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/tiles_packed.png" type="Texture" id=5]
[ext_resource path="res://gomarice_no_continue.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=7]
[ext_resource path="res://scenes/bird.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=11]
size = 23
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=15]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]

[sub_resource type="DynamicFont" id=20]
size = 9
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 198, 90, 18, 18 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 216, 90, 18, 18 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=16]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 6
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.529412, 0.807843, 0.921569, 1 )

[node name="Label" type="Label" parent="."]
self_modulate = Color( 0.223529, 0.223529, 0.223529, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -53.5
margin_top = 15.0
margin_right = 53.5
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "ASTROBLOB"
align = 1
valign = 1

[node name="bird" parent="." instance=ExtResource( 8 )]
position = Vector2( 358, 37 )
speed = 35

[node name="Buttons" type="Control" parent="."]
margin_left = 40.0
margin_top = 55.0
margin_right = 129.0
margin_bottom = 156.0

[node name="Play" type="Button" parent="Buttons"]
pause_mode = 2
self_modulate = Color( 0.937255, 0.937255, 0.937255, 1 )
margin_right = 89.0
margin_bottom = 24.0
custom_colors/font_color_pressed = Color( 0.501961, 0.537255, 0.74902, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 13 )
text = "Play"
flat = true
align = 0

[node name="How To Play" type="Button" parent="Buttons"]
pause_mode = 2
self_modulate = Color( 0.937255, 0.937255, 0.937255, 1 )
margin_top = 27.0
margin_right = 106.0
margin_bottom = 56.0
custom_colors/font_color_pressed = Color( 0.501961, 0.537255, 0.74902, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 14 )
text = "How To Play"
flat = true
align = 0

[node name="Options" type="Button" parent="Buttons"]
pause_mode = 2
self_modulate = Color( 0.937255, 0.937255, 0.937255, 1 )
margin_top = 54.0
margin_right = 89.0
margin_bottom = 83.0
custom_colors/font_color_pressed = Color( 0.501961, 0.537255, 0.74902, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 15 )
text = "Options"
flat = true
align = 0

[node name="Exit" type="Button" parent="Buttons"]
pause_mode = 2
self_modulate = Color( 0.937255, 0.937255, 0.937255, 1 )
margin_top = 81.0
margin_right = 89.0
margin_bottom = 110.0
custom_colors/font_color_pressed = Color( 0.501961, 0.537255, 0.74902, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 12 )
text = "Exit"
flat = true
align = 0

[node name="credits" type="Button" parent="Buttons"]
margin_left = 246.0
margin_top = 100.0
margin_right = 290.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 20 )
text = "Credits"
flat = true

[node name="tileset" type="Node2D" parent="."]

[node name="TileMap" parent="tileset" instance=ExtResource( 2 )]
tile_data = PoolIntArray( 393226, 1, 65537, 393227, 1, 65538, 393228, 1, 65538, 393229, 1, 65538, 393230, 1, 65538, 393231, 1, 65538, 393232, 1, 65539, 458762, 1, 458753, 458763, 1, 458754, 458764, 1, 458754, 458765, 1, 458754, 458766, 1, 458754, 458767, 1, 458754, 458768, 1, 458755 )

[node name="TileMap2" parent="tileset" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 327690, 4, 0 )

[node name="player" type="AnimatedSprite" parent="tileset"]
position = Vector2( 262, 84 )
frames = SubResource( 10 )
centered = false

[node name="checkpoint" type="AnimatedSprite" parent="tileset"]
position = Vector2( 234, 99 )
frames = SubResource( 8 )
frame = 1
playing = true

[node name="How-To-Play" type="Node2D" parent="."]

[node name="Options" type="Node2D" parent="."]
visible = false

[node name="VSplitContainer" type="VSplitContainer" parent="Options"]
margin_left = 50.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 154.0

[node name="music" type="Label" parent="Options/VSplitContainer"]
margin_right = 50.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 16 )
text = "MUSIC"

[node name="HSlider" type="HSlider" parent="Options/VSplitContainer"]
margin_top = 27.0
margin_right = 50.0
margin_bottom = 43.0
value = 100.0

[node name="sound" type="Label" parent="Options/VSplitContainer"]
margin_top = 65.0
margin_right = 40.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 17 )
text = "SOUND"

[node name="HSlider2" type="HSlider" parent="Options/VSplitContainer"]
margin_top = 80.0
margin_right = 50.0
margin_bottom = 96.0
value = 100.0

[node name="Back_button" type="Button" parent="Options"]
margin_left = 4.0
margin_top = 153.0
margin_right = 39.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 18 )
text = "BACK"
flat = true

[node name="How-to-play" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="How-to-play"]
margin_left = 38.0
margin_top = 41.0
margin_right = 145.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 19 )
text = "W - Move Up/jump
A - Move Left
S - Move Right
D - Move Down
SpaceBar - pause

your aim is to avoid enemies, collect keys to unlock the door and go to the next level till the game is over"
valign = 1
autowrap = true

[node name="Back_button" type="Button" parent="How-to-play"]
margin_left = 4.0
margin_top = 153.0
margin_right = 39.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 18 )
text = "BACK"
flat = true

[node name="credits" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="credits"]
margin_left = 38.0
margin_top = 41.0
margin_right = 145.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 19 )
text = "developer:
Victor Jack (Thedon__dev)

Music:
nojisuma from pixabay.com

assets:
kenny.nl"
align = 1
valign = 1
autowrap = true

[node name="Back_button" type="Button" parent="credits"]
margin_left = 4.0
margin_top = 153.0
margin_right = 39.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 18 )
text = "BACK"
flat = true

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/How To Play" to="." method="_on_How_To_Play_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Buttons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Options/Back_button" to="." method="_on_Back_button_pressed"]
[connection signal="pressed" from="How-to-play/Back_button" to="." method="_on_Back_button_pressed"]
[connection signal="pressed" from="credits/Back_button" to="." method="_on_Back_button_pressed"]
